--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,7 +4,7 @@
   | default @import url()
   |============================
 */
-@import url('./reset.css');
+/* @import url('./reset.css');
 @import url('./vite-promo.css');
 @import url('./header.css');
 
@@ -21,5 +21,5 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
+  -webkit-text-size-adjust: 100%; */
+/* } */
