--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,3 +1,4 @@
-body {
-  background-color: aqua;
-}
+@import './base/common';
+@import './base/reset';
+@import './utils/variables';
+@import './base/body';
