add sprite + clean code

--- a/src/partials/table.html
+++ b/src/partials/table.html
@@ -16,7 +16,11 @@
       <td class="category">Technology</td>
       <td>This is the content of Item 1.</td>
       <td class="date">2023-07-25</td>
-      <td class="icon">⭐</td>
+      <td class="icon">
+        <svg class="icon-cart" width="16" height="16">
+          <use href="./images/sprite.svg#cart"></use>
+        </svg>
+      </td>
     </tr>
     <tr>
       <td>Item 2</td>
