--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,3 +2,5 @@
 @import './base/reset';
 @import './utils/variables';
 @import './base/body';
+@import './components/buttons';
+@import './components/icons';
