--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -7,7 +7,7 @@ $txt-secondary-color: #8c8c8c;
 $txt-footer-color: #545454;
 
 /* Фонові кольори */
-$bg-header-color: #151515c5;
+$bg-btn-color: #8c8c8c;
 $bg-footer-color: #f7f7f7;
 $bg-white-color: #ffffff;
 $bg-backdrop-color: rgba(47, 48, 58, 0.6);
