--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,5 +2,7 @@
 @import './base/reset';
 @import './utils/variables';
 @import './base/body';
+@import './components/table';
+
 @import './components/buttons';
 @import './components/icons';
