--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,5 +1,5 @@
-$txt-white-color: #ffffff;
-$txt-black-color: #000000;
+$txt-white-color: #ffffff; // use
+$txt-black-color: #000000; // use
 $txt-disabled-color: #ababab;
 $txt-active-color: #ff6b08;
 $txt-current-color: #ff001b;
@@ -7,8 +7,10 @@ $txt-secondary-color: #8c8c8c;
 $txt-footer-color: #545454;
 
 /* Фонові кольори */
-$bg-btn-color: #8c8c8c;
-$bg-footer-color: #f7f7f7;
+$bg-color: #8c8c8c; // use
+$bg-btn-active-color: #545454; // use
+$bg-table-row-color: #e9f3faed; // use
+
 $bg-white-color: #ffffff;
 $bg-backdrop-color: rgba(47, 48, 58, 0.6);
 $bg-active-color: #ff6b08;
@@ -20,8 +22,6 @@ $sm: 480px;
 $md: 768px;
 $lg: 1280px;
 $animation: 300ms cubic-bezier(0.4, 0, 0.2, 1);
-$btn-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px,
-  rgba(255, 108, 0, 0.75) 0px 5px 10px;
-$orange-hover: rgb(220, 71, 11);
-$card-developers-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-/* OTHER */
+$btn-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+  rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+$bg-hover-color: #c4e4fbb9; // use
