--- a/src/partials/mainTable.html
+++ b/src/partials/mainTable.html
@@ -1,4 +1,6 @@
-<table class="table">
+<section id="main-table"></section>
+
+<!-- <table class="table">
   <thead>
     <tr class="table__head">
       <th></th>
@@ -11,36 +13,19 @@
     </tr>
   </thead>
   <tbody class="table__body">
-    <tr>
-      <td>
-        <span class="icon-wrapper">
-          <svg width="16" height="16">
-            <use href="./images/sprite.svg#cart"></use>
-          </svg>
-        </span>
-      </td>
-      <td>Item 1</td>
-      <td>2023-07-25</td>
-      <td>Technology</td>
-      <td>This is the content of Item 1.</td>
-      <td>2023-07-25</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>
-        <span class="icon-wrapper">
-          <svg width="16" height="16">
-            <use href="./images/sprite.svg#hangouts"></use>
-          </svg>
-        </span>
-      </td>
-      <td>Item 2</td>
-      <td>2023-07-24</td>
-      <td>Science</td>
-      <td>This is the content of Item 2.</td>
-      <td>2023-07-24</td>
-      <td>🔍</td>
-    </tr>
+    <td>
+      <span class="icon-wrapper">
+        <svg width="16" height="16">
+          <use href="./images/sprite.svg#hangouts"></use>
+        </svg>
+      </span>
+    </td>
+    <td>Item 2</td>
+    <td>2023-07-24</td>
+    <td>Science</td>
+    <td>This is the content of Item 2.</td>
+    <td>2023-07-24</td>
+    <td>🔍</td>
     <tr>
       <td>
         <span class="icon-wrapper">
@@ -55,17 +40,17 @@
       <td>This is the content of Item 3.</td>
       <td>2023-07-23</td>
       <td class="options">
-        <button class="btn" type="button">
+        <button id="btn-edit" class="btn" type="button">
           <svg class="icon" width="16" height="16">
             <use href="./images/sprite.svg#pencil"></use>
           </svg>
         </button>
-        <button class="btn" type="button">
+        <button id="btn-archiv" class="btn" type="button">
           <svg class="icon" width="16" height="16">
             <use href="./images/sprite.svg#box-add"></use>
           </svg>
         </button>
-        <button class="btn" type="button">
+        <button id="btn-delete" class="btn" type="button">
           <svg class="icon" width="16" height="16">
             <use href="./images/sprite.svg#bin"></use>
           </svg>
@@ -73,4 +58,4 @@
       </td>
     </tr>
   </tbody>
-</table>
+</table> -->
