--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -23,6 +23,28 @@
   &:focus svg {
     fill: $bg-btn-active-color;
     transform: scale(1.1);
-    // box-shadow: $btn-shadow;
+  }
+}
+
+.btn-create {
+  display: block;
+  margin-left: auto;
+  padding: 4px;
+
+  width: fit-content;
+
+  border: 1px solid $bg-btn-active-color;
+  border-radius: 4px;
+  cursor: pointer;
+
+  color: $txt-black-color;
+  background-color: bg-table-row-color;
+
+  transition: transform $animation, background-color $animation;
+
+  &:hover,
+  &:focus {
+    background-color: $bg-hover-color;
+    transform: scale(1.05);
   }
 }
