--- a/src/partials/button.html
+++ b/src/partials/button.html
@@ -1,1 +1,3 @@
-<button id="btn-create" class="btn-create" type="button">Create Note</button>
+<button id="btn-create" class="btn-create" type="button" data-modal-open>
+  Create Note
+</button>
