--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -10,9 +10,9 @@ $txt-footer-color: #545454;
 $bg-color: #8c8c8c; // use
 $bg-btn-active-color: #545454; // use
 $bg-table-row-color: #e9f3faed; // use
+$bg-white-color: #ffffff; // use
+$bg-backdrop-color: rgba(47, 48, 58, 0.6); // use
 
-$bg-white-color: #ffffff;
-$bg-backdrop-color: rgba(47, 48, 58, 0.6);
 $bg-active-color: #ff6b08;
 $bg-active-color-alpha: rgba(255, 166, 0, 0.551);
 $bg-rating-color: rgba(47, 48, 58, 0.5);
