--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -1,72 +1,80 @@
-.backdrop {
+/* Стили для подложки */
+
+.overlay {
+  /* Скрываем подложку  */
+  opacity: 0;
+  visibility: hidden;
+
   position: fixed;
   top: 0;
   left: 0;
-
   width: 100%;
   height: 100%;
-
-  background-color: $bg-backdrop-color;
-
-  opacity: 1;
-  visibility: visible;
-  transition: opacity $animation, visibility $animation;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 20;
+  transition: 0.3s all;
 }
 
-.backdrop.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-  visibility: hidden;
-}
+/* Стили для модальных окон */
 
 .modal {
-  position: absolute;
+  /* Скрываем окна  */
+  opacity: 0;
+  visibility: hidden;
+
+  /*  Установаем ширину окна  */
+  width: 100%;
+  max-width: 500px;
+
+  /*  Центрируем и задаем z-index */
+  position: fixed;
   top: 50%;
   left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 30; /* Должен быть выше чем у подложки*/
 
-  padding: 15px;
+  /*  Побочные стили   */
+  box-shadow: 0 3px 10px -0.5px rgba(0, 0, 0, 0.2);
+  padding: 30px;
+  border-radius: 3px;
+  background-color: #fff;
+  transition: 0.3s all;
+}
 
-  width: 528px;
-  height: fit-content;
-  border-radius: 4px;
+/* Стили для активных классов подложки и окна */
 
-  background-color: $bg-white-color;
-
-  transform: translate(-50%, -50%) scale(1);
+.modal.active,
+.overlay.active {
   opacity: 1;
-  transition: transform $animation, opacity $animation;
+  visibility: visible;
 }
 
-.backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0.75);
-  opacity: 0;
-}
+/* Стили для кнопки закрытия */
 
-.modal button {
+.modal__cross {
+  width: 15px;
+  height: 15px;
   position: absolute;
-  top: 8px;
-  right: 8px;
+  top: 20px;
+  right: 20px;
+  fill: #444;
+  cursor: pointer;
+  transition: transform $animation;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 30px;
-  height: 30px;
-
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-
-  background-color: $bg-white-color;
-  transition: scale $animation, transform $animation;
-
-  color: $txt-black-color;
+  &:hover,
+  &:focus {
+    transform: scale(1.15);
+  }
 }
 
-.modal button:hover,
-.modal button:focus {
-  transform: rotate(180deg) scale(1.15);
-}
+/* Стили для кнопок. Мы ведь порядочные разработчики, негоже простые ссылки оставлять */
 
-.modal-close {
-  fill: currentColor;
+.modal-link {
+  padding: 20px;
+  display: inline-block;
+  text-decoration: none;
+  background-color: #414b52;
+  margin: 10px;
+  color: #fff;
+  border-radius: 3px;
 }
