--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -25,3 +25,5 @@ $animation: 300ms cubic-bezier(0.4, 0, 0.2, 1);
 $btn-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
   rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 $bg-hover-color: #c4e4fbb9; // use
+$border-active-color: #0056b3; // use
+$border-color: #ababab; // use
