--- a/src/partials/summaryTable.html
+++ b/src/partials/summaryTable.html
@@ -1,48 +1,50 @@
-<table class="table table--summary">
-  <thead>
-    <tr class="table__head">
-      <th></th>
-      <th>Note Category</th>
-      <th>Active</th>
-      <th>Archived</th>
-    </tr>
-  </thead>
-  <tbody class="table__body">
-    <tr>
-      <td>
-        <span class="icon-wrapper">
-          <svg width="16" height="16">
-            <use href="./images/sprite.svg#cart"></use>
-          </svg>
-        </span>
-      </td>
-      <td>Task</td>
-      <td>13</td>
-      <td>4</td>
-    </tr>
-    <tr>
-      <td>
-        <span class="icon-wrapper">
-          <svg width="16" height="16">
-            <use href="./images/sprite.svg#lightbulb"></use>
-          </svg>
-        </span>
-      </td>
-      <td>Idea</td>
-      <td>13</td>
-      <td>4</td>
-    </tr>
-    <tr>
-      <td>
-        <span class="icon-wrapper">
-          <svg width="16" height="16">
-            <use href="./images/sprite.svg#bubble"></use>
-          </svg>
-        </span>
-      </td>
-      <td>Random Thought</td>
-      <td>3</td>
-      <td>44</td>
-    </tr>
-  </tbody>
-</table>
+<section style="margin-top: 50px">
+  <table class="table table--summary">
+    <thead>
+      <tr class="table__head">
+        <th></th>
+        <th>Note Category</th>
+        <th>Active</th>
+        <th>Archived</th>
+      </tr>
+    </thead>
+    <tbody class="table__body">
+      <tr>
+        <td>
+          <span class="icon-wrapper">
+            <svg width="16" height="16">
+              <use href="./images/sprite.svg#cart"></use>
+            </svg>
+          </span>
+        </td>
+        <td>Task</td>
+        <td>13</td>
+        <td>4</td>
+      </tr>
+      <tr>
+        <td>
+          <span class="icon-wrapper">
+            <svg width="16" height="16">
+              <use href="./images/sprite.svg#lightbulb"></use>
+            </svg>
+          </span>
+        </td>
+        <td>Idea</td>
+        <td>13</td>
+        <td>4</td>
+      </tr>
+      <tr>
+        <td>
+          <span class="icon-wrapper">
+            <svg width="16" height="16">
+              <use href="./images/sprite.svg#bubble"></use>
+            </svg>
+          </span>
+        </td>
+        <td>Random Thought</td>
+        <td>3</td>
+        <td>44</td>
+      </tr>
+    </tbody>
+  </table>
+</section>
