--- a/src/sass/components/_table.scss
+++ b/src/sass/components/_table.scss
@@ -54,6 +54,6 @@ tr:hover {
   fill: $txt-white-color;
 }
 
-.table--summary {
-  margin-top: 50px;
-}
+// .table--summary {
+//   margin-top: 50px;
+// }
