render task data to modal

--- a/src/partials/modalEdit.html
+++ b/src/partials/modalEdit.html
@@ -10,7 +10,9 @@
     />
   </svg>
 
-  <form id="form-edit" class="form-edit" action="/submit" method="post">
+  <div id="form-edit-container">111</div>
+
+  <!-- <form id="form-edit" class="form-edit" action="/submit" method="post">
     <label for="name"
       >Name:
       <input type="text" id="name" name="name" value="Jack" required />
@@ -36,5 +38,5 @@
     </label>
 
     <input type="submit" value="Submit" />
-  </form>
+  </form> -->
 </div>
