add funcs closeModal + getChoosedOption

--- a/src/partials/modalEdit.html
+++ b/src/partials/modalEdit.html
@@ -10,33 +10,5 @@
     />
   </svg>
 
-  <div id="form-edit-container">111</div>
-
-  <!-- <form id="form-edit" class="form-edit" action="/submit" method="post">
-    <label for="name"
-      >Name:
-      <input type="text" id="name" name="name" value="Jack" required />
-    </label>
-
-    <label for="created"
-      >Created:
-      <input type="date" id="created" name="created" required />
-    </label>
-
-    <label for="category"
-      >Category:
-      <select id="category" name="category">
-        <option value="Task">Task</option>
-        <option value="Random Thought">Random Thought</option>
-        <option value="Idea">Idea</option>
-      </select>
-    </label>
-
-    <label for="content"
-      >Content:
-      <textarea id="content" name="content" required>"123456789"</textarea>
-    </label>
-
-    <input type="submit" value="Submit" />
-  </form> -->
+  <div id="form-edit-container"></div>
 </div>
