--- a/src/partials/summaryTable.html
+++ b/src/partials/summaryTable.html
@@ -1,4 +1,4 @@
-<section style="margin-top: 50px">
+<section id="summary-table" style="margin-top: 50px">
   <table class="table table--summary">
     <thead>
       <tr class="table__head">
