--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -7,7 +7,7 @@ $bg-color: #8c8c8c; // use
 $bg-btn-active-color: #545454; // use
 $bg-table-row-color: #e9f3faed; // use
 $bg-white-color: #ffffff; // use
-$bg-backdrop-color: rgba(47, 48, 58, 0.6); // use
+$bg-backdrop-color: #2f303a99; // use
 
 /* OTHER */
 $animation: 300ms cubic-bezier(0.4, 0, 0.2, 1);
